# AKR_Monitor

./: .gitignore  PACKET_INFO.md  README.md  pyproject.toml  requirements.txt
packet_monitor/: __init__.py  cli.py  gui.py
packet_monitor/logs/: data_20251015_180811.csv
